# policy_copilot_submission

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTIONS_FOR_EVALUATOR.md  INSTRUCTIONS_FOR_GPT.md  LICENSE  README.md  generate_history.py  pyproject.toml  requirements.txt  test_paths.py
.github/: pull_request_template.md
.streamlit/: config.toml
configs/: final_config.json  run_config.json
data/: README.md
docs/: claim_evidence_map.md  demo_scripts.md  figure_table_register.md  phase7_acceptance_tests.md  project_truth_registry.md  reference_audit.md  reproducibility_checklist.md  requirements_traceability_matrix.md  risk_audit_table.md  sprints.md  ui_architecture.md  ui_scope.md
results/: manifest.json
scripts/: apply_leeds_template.py  assist_label_gold.py  auto_label_gold.py  build_clean_submission_zip.py  build_index.py  classify_errors.py  compare_ablations.py  compute_auditability_scores.py  debug_rerank.py  eval_objective_slice.py  export_human_eval_pack.py  generate_corpus_pdf.py  generate_diagrams.py  import_human_eval_pack.py  ingest_corpus.py  make_critic_dataset.py  make_golden_set_template.py  query_cli.py  reproduce_all.sh  reproduce_offline.py  reproduce_online.py  run_acceptance_tests.sh  run_all_experiments.py  run_critic_eval.py  run_dev_tuning.sh  run_eval.py  select_best_config.py  smoke_install.sh  validate_golden_set.py  verify_artifacts.py  verify_phase6.py
tests/: test_abstain.py  test_answerer_b3_generative.py  test_audit_report_export.py  test_b2_extractive_integration.py  test_b3_fallback_relevance_gate.py  (+33 more)
(+385 files in other folders)
