[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "policy_copilot"
version = "0.1.0"
authors = [
  { name="Student Name", email="student@leeds.ac.uk" },
]
description = "Audit-Ready Policy Copilot Dissertation Project"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
    # Lightweight core for offline BM25 + evaluation + plotting
    "rank-bm25",
    "numpy",
    "pandas",
    "matplotlib",
    "tqdm",
    "python-dotenv",
    "pydantic",
]

[project.optional-dependencies]
ml = [
    "faiss-cpu==1.7.4",
    "sentence-transformers==2.7.0",
    "transformers==4.41.2",
    "torch==2.3.1",
]

ui = [
    "streamlit",
]

llm = [
    "openai",
    "anthropic",
]

ingest = [
    "pypdf",
    "pdfplumber",
    "tiktoken",
]

rich = [
    "rich",
]

dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/username/policy-copilot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
